CI on three platforms, and a release that needs no Java installed
One workflow, two jobs with a shared front half. Every push to master and
every pull request is built and tested on Windows, macOS and Linux -- the
suite opens no window anywhere, which is what lets a missing model fail a
build rather than fail in front of a player. A v* tag runs the same jobs and
then keeps what they made.

Three runners rather than one because jpackage builds for the machine it is
standing on: the Windows bundle can only be made on Windows. Each carries its
own Java 25 runtime, so a player unzips and plays. Windows gets a zip, Linux a
tar.gz -- zip loses the executable bit, and a launcher that will not launch is
a strange thing to ship -- and macOS a dmg.

Two things are spelled out that could have been left to a default, and both
would have failed at run time rather than at build time. --add-modules names
jdk.unsupported, because LWJGL reaches for sun.misc.Unsafe and a runtime built
without it dies on the first frame. And jpackage is called through $JAVA_HOME
rather than by name, which is the trap already written down in STATUS: an older
jpackage bundles an older runtime, and the windowed exe then exits 1 in silence.

Nothing third-party runs in it -- GitHub's own actions, Gradle's, and the gh
CLI that is on the runner already.

Also fixes a hole in yesterday's preloading that this found. jME's asset cache
holds parsed assets weakly: read twenty megabytes, drop the reference, and the
collector is free to undo the whole exercise before the first monster walks in.
One instance of each is now kept for the life of the window, and the reader
counts its work in a finally -- a thread that dies holding the count leaves the
loading screen up for ever, and a game that will not start is worse than a game
missing one texture.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>